template/style.css
/* ... */
.bs-example {
    position: relative;
    padding: 345px 15px 15px;
    /* margin: 0 -15px 15px; */
    border-color: #e5e5e5 #eee #eee;
    border-style: solid;
    border-width: 1px 0;
    -webkit-box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
    box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
    background-color: #FE4a49;
}
.section-info {
    position: relative;
    padding: 45px 15px 15px;
    /* margin: 0 -15px 15px; */
    border-color: #e5e5e5 #eee #eee;
    border-style: solid;
    border-width: 1px 0;
    -webkit-box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
    box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
    background-color: #fff;
}
.row-section{
    margin-left: -20%;
    width: 135%;
}

.section2{
  margin-top: -200px;
}
.image2{
  vertical-align: middle;
  margin-top: -171px;
}

.logo2{
    width: 56px;
    margin-left: 9em;
    margin-top: -16em;
}

@media (max-width: 374px) and (min-width: 320px){
  .logo2 {
      position: relative;
      width: 14%;
      top: 9.5em;
      margin-left: 39%;
  }
  #info-bar {
      width: auto;
      padding: 0.5em;
      background-color: #000;
      opacity: .7;
      margin-top: -0.9px;
      font-size: 19px;
  }

  h1, .h1, h2, .h2, h3, .h3 {
    margin-top: 20px;
    margin-bottom: 0px;
  }

  .bs-example {
    position: relative;
    padding: 255px 0px 14px;
  }

  .row {
      margin-left: 106px;
      /* margin-right: -15px; */
  }

  .text-hero {
      position: relative;
      align-items: center;
      text-align: center;
      width: 85%;
      color: #fff;
      margin-left: 11%;
      top: 1.5em;
      font-size: 20px;
  }

  .m-text-section4 {
    position: relative;
    align-items: center;
    text-align: center;
    width: 85%;
    color: #fff;
    margin-left: 8%;
    top: 1.5em;
    font-size: 20px;
  }

  .button-section4 {
    position: relative;
    align-items: center;
    text-align: center;
    /*width: 24%;*/
    color: #fff;
    margin-left: 38%;
    top: 2.9em;
    font-size: 16px;
  }

  .text-section4 {
    display: none;
  }

  .text2-section4 {
    display: none;
  }

  img {
      vertical-align: middle;
      margin-top: -132px;
  }

  .m-filed{
    margin-left: 5%;
  }

  .label-section3{
    margin-left: -53%;
    /* width: 148%; */
    font-size: 20px;
  }

  .ico-footer {
      display: inline-block;
      width: 8em;
      margin-top: 11%;
      margin-left: -10%;
      margin-bottom: 7%;
  }

  .footer-space {
      margin-top: 1%;
      margin-bottom: 1%;
      margin-left: -17%;
  }

  .form-control-input{
    width: 100%
  }
  .x-form-control-position{
    margin-bottom: 10%;
  }

  .m-search{
    width: auto;
    float: right;
    margin-top: -13%
  }

  .m-field-search{
    width: 69%;
  }

  .m-form-search{
    background-color: #fff;
    margin-top: 10%;
  }

  .step1{
    float: left;
    color: #FCCA36;
    margin-left: 16%;
    width: 80%;
  }

  .step2{
    float: left;
    color: #FCCA36;
    margin-left: 17%;
    -webkit-max-logical-width: 82%;
  }

  .step3{
    float: left;
    color: #FCCA36;
    margin-left: 16%;
    width: 80%;
  }

  .step4{
    float: left;
    color: #FCCA36;
    width: 88%;
    margin-left: 16%;
  }

  .step-info1{
    margin-left: 20%;
    font-size: 1.1em;
  }

  .step-info2{
    margin-top: 8%;
    margin-left: 20%;
    font-size: 1.1em;
  }

  .step-info3{
    margin-left: 20%;
    font-size: 1.1em;
  }

  .step-info4{
    margin-left: 20%;
    font-size: 1.1em;
  }

  .ico-info{
    width: auto;
    margin-left: -73%;
  }

  .ico1{
  margin-left: 48%;
  }

  .ico2{margin-left: 47%;}

  .ico3{margin-left: 45%;}

  .ico4{
    margin-left: 51%;
  }

  div.modal-body div {
      width: 94%;
      margin-bottom: -1em;
  }

  .form-control-input {
    width: 16%;
  }

  .listo-modal {
      width: 26%;
  }

  .navbar-default {
      background-color: #fff;
      border-bottom: 1px solid #e7e7e7;
  }

  footer div.row1{
    margin-left: 32%;
  }

  footer div ul li{
    margin-bottom: 1em;
  }
  footer div ul li ul li{
    margin-bottom: 0em;
  }

  .image2 {
      vertical-align: middle;
      margin-top: -90px;
  }

}
/* ... */

